--- a/sass-starter/index.html
+++ b/sass-starter/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Virtual1</title>
   <link rel="stylesheet" href="../css/style.min.css">
+  <link rel="apple-touch-icon" sizes="144x144" href="src/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="src/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="src/images/favicon-16x16.png">
 </head>
   <body>
     <section class="header">
@@ -63,7 +66,7 @@
           <li class="parent"><a href="#">who we work with</a></li>
           <li class="parent"><a href="#">solutions</a></li>
           <li class="parent"><a href="#">news</a></li>
-          <li class="parent"><a href="#">contact</a></li>
+          <li class="parent"><a href="#">cont</a></li>
         </nav>
     </div>
     </section>
