--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
   <body>
+    <!-- HEADER -->
     <section class="header">
       <div class="logo">
         <img src="src/images/logo.png">
@@ -56,7 +57,7 @@
           <li class="parent"><a href="#">contact us</a></li>
         </ul>
       </div>
-
+      <!-- MOBILE NAV  -->
       <div class="menu-toggle" id="trigger">
         <span class="line one"></span>
         <span class="line two"></span>
@@ -71,8 +72,10 @@
           <li class="parent"><a href="#">news</a></li>
           <li class="parent"><a href="#">contact</a></li>
         </nav>
-    </div>
+      </div>
     </section>
+
+    <!-- HERO  -->
     <section class="hero">
       <div class="hero-wrap">
         <div class="copy">
@@ -162,7 +165,6 @@
     
     <section class="carousel">
       <div class="slideshow-container">
-
         <div class="mySlides fade">
           <img src="src/images/cloud.png">
           <h2>connectivity</h2>
@@ -172,7 +174,6 @@
             <span class="shaddow"></span>
           </div>
         </div>
-
         <div class="mySlides fade">
           <img src="src/images/window.png">
           <h2>connectivity</h2>
@@ -182,7 +183,6 @@
             <span class="shaddow"></span>
           </div>
         </div>
-
         <div class="mySlides fade">
           <img src="src/images/cloud.png">
           <h2>connectivity</h2>
@@ -192,15 +192,14 @@
             <span class="shaddow"></span>
           </div>
         </div>
-
       </div>
-      
       <div style="text-align:center">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
       </div>
     </section>
+
   </body>
   <script type="text/javascript" src="js/index.js"></script>
 </html>
