--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- HEADER -->
     <section class="header">
       <div class="logo">
-        <img src="src/images/logo.png">
+        <a href="#"><img src="src/images/logo.png"></a>
       </div>
       <div class="nav-wrapper">
         <ul class="nav">
